<?xml version="1.0"?>
<package format="2">
  <name>modvo</name>
  <version>0.0.0</version>
  <description>Modular Visual Odometry Package</description>

  <maintainer email="hudson.bruno@ic.unicamp.br">Hudson Bruno</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>qcar</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

</package>